--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "discord.js": "^12.5.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "erlpack": "^0.1.3",
@@ -18,6 +19,7 @@
     "express-session": "^1.17.1",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
-    "passport-discord": "^0.1.4"
+    "passport-discord": "^0.1.4",
+    "socket.io": "^3.0.3"
   }
 }
