--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "discord-markdown": "^2.4.1",
     "discord.js": "^12.5.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
