--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "erlpack": "^0.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "markdown-to-text-emoji": "^1.1.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
