--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webappdiscord",
+  "name": "mychat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "markdown-to-text-emoji": "^1.1.0",
+    "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
