--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ TOKEN_WH=AWEWAEWERs-adsw9dawdWADd-aWDwadaddddaaa
 TOKEN_BOT=MZasdasdCasfASFafwfafaafaf.MAsdasdwwwwaaAAw
 ID_CHANNEL=709260342345233782
 ID_CHANNEL_LOG=723708264960753864
+WH_NAME=Nombre xd
+WH_AVATAR=https://cdn.discordapp.com/emojis/790646578343444491.png
