--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "pretty": "prettier -w ."
     },
     "engines": {
-        "node": ">=12.x",
+        "node": "14.x",
         "npm": "*"
     },
     "keywords": [],
