--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.prettierrc
+.dockerignore
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 .env
+
+package-lock.json
+Procfile
